--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -49,7 +49,9 @@ dependencies {
     implementation Compose.compiler
     implementation Compose.ui
     implementation Compose.uiToolingPreview
-    implementation Compose.material
+    implementation Compose.material3
+    implementation Compose.material3WindowSizeClass
+    implementation Compose.icons
     implementation Compose.navigation
     implementation Compose.hiltNavigationCompose
     implementation Compose.viewModelCompose
