--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,8 @@ dependencyResolutionManagement {
 rootProject.name = "simple-vocabulary"
 include ":app"
 
+include ":core-data"
+include ":core-database"
 include ":core-designsystem"
 include ":core-model"
 include ":core-navigation"
