--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,10 @@ include ":feature-sets:domain"
 include ":feature-sets:presentation"
 
 include ":feature-set-detail"
+
+include ":feature-cards"
+include ":feature-cards:data"
+include ":feature-cards:domain"
+include ":feature-cards:presentation"
+
+include ":feature-card-detail"
